[gd_scene load_steps=3 format=2]

[ext_resource path="res://Platform.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 20 )

[node name="Platform" type="Node2D"]
script = ExtResource( 1 )

[node name="Debug_Line" type="Node2D" parent="."]

[node name="Platform_Base" type="KinematicBody2D" parent="."]
motion/sync_to_physics = true

[node name="ColorRect" type="ColorRect" parent="Platform_Base"]
margin_right = 100.0
margin_bottom = 40.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform_Base"]
position = Vector2( 50, 20 )
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]
playback_process_mode = 0

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
